# KursWork1

./: .gitignore  CMakeLists.txt  Kurs_3.sln  Kurs_3.vcxproj  Kurs_3.vcxproj.filters  README.md  SQLWORK.cpp  SQLWORK.h  Source.cpp  account.h  accounts.db  authorization.cpp  authorization.h  consoleInput.cpp  consoleInput.h  helpFunctions.cpp  helpFunctions.h  menu.cpp  menu.h  product.db  product.h  registration.cpp  registration.h  session.cpp  session.h
Debug/: Kurs_3.ilk  Kurs_3.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Kurs_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Kurs_3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/sha/: CMakeLists.txt
include/sql/: CMakeLists.txt
src/: CMakeLists.txt  Source.cpp
src/basic/: Account.cpp  Account.h  CMakeLists.txt  ConsloeOut.h  ConsoleOut.cpp  ConsoleOut.h  Product.cpp  Product.h  account.h  helpFunctions.cpp  helpFunctions.h  product.h
src/basic/Account/: Account.cpp  Account.h  Account.hpp  CMakeLists.txt
src/basic/Console/: CMakeLists.txt  ConsoleInp.cpp  ConsoleInp.h  ConsoleInp.hpp  ConsoleOut.cpp  ConsoleOut.h
src/basic/Product/: CMakeLists.txt  Product.cpp  Product.h
src/dataBases/: AccountsDB.cpp  AccountsDB.h  CMakeLists.txt
src/db/: product.db
src/manage/: AdminSession.cpp  AdminSession.h  CMakeLists.txt  UserSession.cpp  UserSession.h  authorization.cpp  authorization.h  registration.cpp  registration.h  session.cpp  session.h  session.hpp
src/manage/AdminSession/: AdminSession.cpp  AdminSession.h  AdminSession.hpp  CMakeLists.txt
src/manage/Authorization/: CMakeLists.txt  authorization.cpp  authorization.h  authorization.hpp
src/manage/Registration/: CMakeLists.txt  registration.cpp  registration.h  registration.hpp
src/manage/UserSession/: CMakeLists.txt  UserSession.cpp  UserSession.h  UserSession.hpp
src/menu/: CMakeLists.txt  menu.cpp  menu.h  menu.hpp
src/menu/confirm/: CMakeLists.txt  ConfirmationMenu.cpp  ConfirmationMenu.h  ConfirmationMenu.hpp
src/menu/factory/: CMakeLists.txt  MenuFactory.cpp  MenuFactory.h  MenuFactory.hpp
src/sha/: CMakeLists.txt
src/sql/: CMakeLists.txt  SQLWORK.cpp  SQLWORK.h
src/sqlwork/: AccountsDB.cpp  AccountsDB.h  CMakeLists.txt  ProductsDB.cpp  ProductsDB.h  SQLWORK.cpp  SQLWORK.h
src/sqlwork/AccountsDB/: AccountsDB.cpp  AccountsDB.h  AccountsDB.hpp  CMakeLists.txt
src/sqlwork/ProductsDB/: CMakeLists.txt  ProductsDB.cpp  ProductsDB.h  ProductsDB.hpp
